# workspace-release-exp

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  bump_version.sh  release-plz.toml
.github/workflows/: auto_merge.yml  bump_version.yml  main.yml  release.yml  release_and_publish.yml  release_assets.yml
jacderida-exp-add-lib/: CHANGELOG.md  Cargo.toml
jacderida-exp-add-lib/src/: lib.rs
jacderida-exp-add-one/: Cargo.toml
jacderida-exp-add-one/src/: lib.rs
jacderida-exp-adder/: Cargo.toml
jacderida-exp-adder/src/: main.rs
jacderida-exp2-add-lib/: CHANGELOG.md  Cargo.toml
jacderida-exp2-add-lib/src/: lib.rs
jacderida-exp2-adder/: CHANGELOG.md  Cargo.toml
jacderida-exp2-adder/src/: main.rs
jacderida-exp2-adder2/: CHANGELOG.md  Cargo.toml
jacderida-exp2-adder2/src/: main.rs
