[package]
name = "jacderida-exp2-adder"
version = "0.1.18"
edition = "2018"
description = "Little binary for experimenting with automated release workflows."
license = "MIT OR Apache-2.0"

[[bin]]
name = "adder"
path = "src/main.rs"

[dependencies]
jacderida-exp2-add-lib = { version = "^0.1.18", path = "../jacderida-exp2-add-lib" }
